; ModuleID = '/home/carl/AnghaBench/h2o/src/extr_ssl.c_setup_cache_memcached.c'
source_filename = "/home/carl/AnghaBench/h2o/src/extr_ssl.c_setup_cache_memcached.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_12__ = type { i32, %struct.TYPE_10__, %struct.TYPE_8__ }
%struct.TYPE_10__ = type { %struct.TYPE_11__ }
%struct.TYPE_11__ = type { %struct.TYPE_9__ }
%struct.TYPE_9__ = type { i32, i32 }
%struct.TYPE_8__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { i32, i32, i32 }

@conf = common dso_local global %struct.TYPE_12__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32**, i64)* @setup_cache_memcached to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setup_cache_memcached(i32** %0, i64 %1) #0 {
  %3 = alloca i32**, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  store i32** %0, i32*** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i32, i32* getelementptr inbounds (%struct.TYPE_12__, %struct.TYPE_12__* @conf, i32 0, i32 2, i32 0, i32 2), align 4
  %7 = load i32, i32* getelementptr inbounds (%struct.TYPE_12__, %struct.TYPE_12__* @conf, i32 0, i32 2, i32 0, i32 1), align 4
  %8 = load i32, i32* getelementptr inbounds (%struct.TYPE_12__, %struct.TYPE_12__* @conf, i32 0, i32 2, i32 0, i32 0), align 4
  %9 = load i32, i32* getelementptr inbounds (%struct.TYPE_12__, %struct.TYPE_12__* @conf, i32 0, i32 1, i32 0, i32 0, i32 1), align 4
  %10 = load i32, i32* getelementptr inbounds (%struct.TYPE_12__, %struct.TYPE_12__* @conf, i32 0, i32 1, i32 0, i32 0, i32 0), align 4
  %11 = call i32* @h2o_memcached_create_context(i32 %6, i32 %7, i32 %8, i32 %9, i32 %10)
  store i32* %11, i32** %5, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = load i32, i32* getelementptr inbounds (%struct.TYPE_12__, %struct.TYPE_12__* @conf, i32 0, i32 0), align 4
  %14 = call i32 @h2o_accept_setup_memcached_ssl_resumption(i32* %12, i32 %13)
  %15 = load i32**, i32*** %3, align 8
  %16 = load i64, i64* %4, align 8
  %17 = call i32 @setup_cache_enable(i32** %15, i64 %16, i32 1)
  ret void
}

declare dso_local i32* @h2o_memcached_create_context(i32, i32, i32, i32, i32) #1

declare dso_local i32 @h2o_accept_setup_memcached_ssl_resumption(i32*, i32) #1

declare dso_local i32 @setup_cache_enable(i32**, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
